--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:background="@drawable/round_corner"
-            android:backgroundTint="@color/button_background_color"
+            android:backgroundTint="#d11d53"
             android:text="Log In"
             android:layout_gravity="center"
             android:stateListAnimator="@null"
@@ -102,7 +102,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/button_background_color"
+                android:textColor="#d11d53 "
                 android:text=" Register"
                 android:onClick="goToRegister"
                 android:textSize="17dp"/>
