--- a/app/src/main/res/layout/activity_paypal.xml
+++ b/app/src/main/res/layout/activity_paypal.xml
@@ -6,70 +6,76 @@
     android:layout_height="match_parent"
     android:padding="25dp"
     android:background="@color/colorPrimary"
-    tools:context=".RegisterActivity">
+    tools:context=".PaypalActivity">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/paypal"
+        android:layout_marginTop="40dp"
+        app:cardCornerRadius="32dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="200dp"
+        android:layout_height="200dp">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@drawable/paypal"/>
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/paypal"
         android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:text="Sign Up"
-            android:textSize="55dp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:layout_marginTop="35dp"
-            android:layout_marginBottom="15dp"/>
-
-        <EditText
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:background="@drawable/flat_corner"
-            android:backgroundTint="@color/colorWhite"
-            android:paddingLeft="15dp"
-            android:layout_marginTop="45dp"
-            android:inputType="text"
-            android:hint="Your Name"
-            android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="30dp"
-            android:textColor="#000"
-            tools:ignore="Autofill"/>
-
 
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="45dp"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
             android:paddingLeft="15dp"
-            android:inputType="textEmailAddress"
-            android:hint="Email Address"
+            android:inputType="number"
+            android:hint="Amount you want to redeem"
             android:textColorHint="@android:color/darker_gray"
             android:layout_marginBottom="30dp"
             android:textColor="#000"
             tools:ignore="Autofill"/>
 
         <EditText
-            android:id="@+id/editTextPassword"
+            android:id="@+id/editText1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
+            android:layout_gravity="center"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
             android:paddingLeft="15dp"
-            android:inputType="textPassword"
-            android:hint="Password"
-            tools:ignore="Autofill"
+            android:inputType="textEmailAddress"
+            android:hint="Paypal Email Adress"
             android:textColorHint="@android:color/darker_gray"
             android:layout_marginBottom="30dp"
-            android:textColor="#000"/>
+            android:textColor="#000"
+            tools:ignore="Autofill"/>
+
+        <EditText
+            android:id="@+id/textName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:layout_gravity="center"
+            android:background="@drawable/flat_corner"
+            android:backgroundTint="@color/colorWhite"
+            android:paddingLeft="15dp"
+            android:hint="Paypal Name"
+            android:textColorHint="@android:color/darker_gray"
+            android:layout_marginBottom="30dp"
+            android:textColor="#000"
+            tools:ignore="Autofill"/>
 
         <Button
             android:id="@+id/button"
@@ -77,37 +83,17 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:background="@drawable/round_corner"
-            android:backgroundTint="#d11d53 "
+            android:backgroundTint="#d11d53"
+            android:text="Redeem"
             android:layout_gravity="center"
             android:stateListAnimator="@null"
-            android:text="Sign Up"
-            android:onClick="register"
             android:textColor="@color/colorWhite"
             android:padding="16dp"
             android:textSize="22sp"
             android:textStyle="bold"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorWhite"
-                android:text="Already have an account? "
-                android:textSize="17dp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#d11d53"
-                android:text=" Login"
-                android:onClick="goToLogin"
-                android:textSize="17dp"/>
-        </LinearLayout>
 
     </LinearLayout>
 
