--- a/app/src/main/res/layout/activity_scratch_and_earn.xml
+++ b/app/src/main/res/layout/activity_scratch_and_earn.xml
@@ -4,122 +4,88 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/colorPrimary"
     tools:context=".ScratchAndEarnActivity">
 
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/correct"-->
-<!--        android:layout_width="500dp"-->
-<!--        android:layout_height="500dp"-->
-<!--        android:layout_alignParentStart="true"-->
-<!--        android:layout_alignParentTop="true"-->
-<!--        android:layout_centerInParent="true"-->
-<!--        android:layout_marginStart="14dp"-->
-<!--        android:layout_marginEnd="14dp"-->
-<!--        android:layout_marginTop="65dp"-->
-<!--        android:layout_alignParentLeft="true"-->
-<!--        android:background="#D3D3D3"-->
-<!--        app:cardCornerRadius="12dp"-->
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="2dp"
+        android:orientation="horizontal">
 
-<!--        app:cardElevation="5dp"-->
-<!--        android:layout_marginLeft="4dp">-->
+        <LinearLayout
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/totalCoins"
+                android:textStyle="bold"
+                android:textColor="@color/colorWhite"
+                android:text="100"
+                android:textSize="22sp"/>
+            <ImageView
+                android:layout_width="33dp"
+                android:layout_height="33dp"
+                android:src="@drawable/coin"
+                />
+        </LinearLayout>
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:orientation="vertical"-->
-<!--            android:background="#F3F3F3">-->
+        <LinearLayout
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/totalCash"
+                android:textStyle="bold"
+                android:textColor="@color/colorWhite"
+                android:text="100"
+                android:textSize="22sp"/>
+            <ImageView
+                android:layout_width="33dp"
+                android:layout_height="33dp"
+                android:src="@drawable/cash"
+                />
+        </LinearLayout>
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="65dp"-->
-<!--                android:text="CONGRATULATIONS!"-->
-<!--                android:textColor="@color/colorWhite"-->
-<!--                android:textAlignment="center"-->
-<!--                android:background="#f3c70d"-->
-<!--                android:gravity="center"-->
-<!--                android:textSize="33sp"-->
-<!--                android:textStyle="bold"/>-->
+        <LinearLayout
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/totalgems"
+                android:textStyle="bold"
+                android:textColor="@color/colorWhite"
+                android:text="100"
+                android:textSize="22sp"/>
+            <ImageView
+                android:layout_width="33dp"
+                android:layout_height="33dp"
+                android:src="@drawable/gem"
+                />
+        </LinearLayout>
 
-<!--            <ImageView-->
-<!--                android:layout_width="100dp"-->
-<!--                android:layout_height="100dp"-->
-<!--                android:src="@drawable/trophy"-->
-<!--                android:layout_gravity="center_horizontal"-->
-<!--                android:layout_marginTop="30dp"/>-->
-
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="65dp"-->
-<!--                android:text="You won"-->
-<!--                android:textColor="#000"-->
-<!--                android:textAlignment="center"-->
-<!--                android:gravity="center"-->
-<!--                android:textSize="55sp"-->
-<!--                android:layout_marginTop="17dp"-->
-<!--                android:textStyle="bold"/>-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="120dp"-->
-<!--                android:orientation="horizontal"-->
-<!--                android:gravity="center"-->
-<!--                >-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/reward"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:textColor="#f3c70d"-->
-<!--                    android:textSize="65sp"-->
-<!--                    android:textStyle="bold"/>-->
-
-<!--                <ImageView-->
-<!--                    android:layout_width="85dp"-->
-<!--                    android:layout_height="85dp"-->
-<!--                    android:id="@+id/rewardicon"-->
-<!--                    android:layout_marginLeft="10dp"-->
-<!--                     />-->
-
-
-<!--            </LinearLayout>-->
-
-<!--            <Button-->
-<!--                android:id="@+id/scratchAgain"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginBottom="20dp"-->
-<!--                android:background="@drawable/round_corner"-->
-<!--                android:backgroundTint="#32CD32"-->
-<!--                android:text="Scratch Again"-->
-<!--                android:stateListAnimator="@null"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:layout_marginStart="30dp"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:layout_marginEnd="30dp"-->
-<!--                android:textColor="@color/colorWhite"-->
-<!--                android:padding="16dp"-->
-<!--                android:textSize="24sp"-->
-<!--                android:textStyle="bold"-->
-<!--                android:layout_marginLeft="30dp" />-->
-<!--        </LinearLayout>-->
-
-<!--        <com.anupkumarpanwar.scratchview.ScratchView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:id="@+id/scratchView"-->
-<!--            app:overlay_image="@drawable/scratch_card"-->
-<!--            app:overlay_width="210dp"-->
-<!--            app:overlay_height="210dp"/>-->
-
-<!--    </androidx.cardview.widget.CardView>-->
+    </LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/correct"
         android:layout_width="250dp"
         android:layout_height="250dp"
         app:cardCornerRadius="15dp"
+        android:layout_centerInParent="true"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="40dp"
