--- a/app/src/main/res/layout/activity_spin_and_earn.xml
+++ b/app/src/main/res/layout/activity_spin_and_earn.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     tools:context=".SpinAndEarnActivity">
@@ -43,19 +42,96 @@
 <!--        </LinearLayout>-->
 <!--    </androidx.appcompat.widget.Toolbar>-->
 
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="2dp"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp">
+            <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/totalCoins"
+            android:textStyle="bold"
+            android:textColor="@color/colorWhite"
+            android:text="100"
+            android:textSize="22sp"/>
+        <ImageView
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:src="@drawable/coin"
+            />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/totalCash"
+                android:textStyle="bold"
+                android:textColor="@color/colorWhite"
+                android:text="100"
+                android:textSize="22sp"/>
+            <ImageView
+                android:layout_width="33dp"
+                android:layout_height="33dp"
+                android:src="@drawable/cash"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/totalgems"
+                android:textStyle="bold"
+                android:textColor="@color/colorWhite"
+                android:text="100"
+                android:textSize="22sp"/>
+            <ImageView
+                android:layout_width="33dp"
+                android:layout_height="33dp"
+                android:src="@drawable/gem"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <rubikstudio.library.LuckyWheelView
         android:id="@+id/luckywheel"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
+        android:layout_width="450dp"
+        android:layout_height="450dp"
         app:lkwCenterImage="@drawable/star"
         android:layout_centerHorizontal="true"
         app:lkwBackgroundColor="#FF9800"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         app:lkwCursor="@drawable/ic_cursor"
         app:lkwTopTextColor="@color/colorWhite"
         app:lkwTopTextSize="18sp"
-        android:layout_marginTop="100dp"
-        android:gravity="center_horizontal" />
+        android:layout_marginTop="90dp"
+        android:gravity="center_horizontal"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
+
 
 
 
@@ -85,23 +161,18 @@
         android:id="@+id/spin"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="35dp"
         android:background="@drawable/round_corner"
-        android:backgroundTint="@color/button"
+        android:backgroundTint="#d11d53 "
         android:text="Spin"
+        android:layout_marginTop="30dp"
         android:stateListAnimator="@null"
         android:layout_below="@id/luckywheel"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="32dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_centerHorizontal="true"
         android:textColor="@color/colorWhite"
         android:textSize="20sp"
+        android:layout_marginBottom="20dp"
         android:padding="15dp"
         android:onClick="playGame"
-        android:textStyle="bold"
-        android:layout_marginLeft="30dp" />
-
+        android:textStyle="bold"/>
 
 </RelativeLayout>
