--- a/app/src/main/res/layout/result_popup_positive.xml
+++ b/app/src/main/res/layout/result_popup_positive.xml
@@ -144,6 +144,7 @@
                 android:textStyle="bold"/>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/score"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
