--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -119,7 +119,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="13sp"
                     android:textColor="#292727"
-                    android:text="You can chang your name at any moment."/>
+                    android:text="You can change your name at any moment."/>
 
             </LinearLayout>
         </LinearLayout>
@@ -171,7 +171,7 @@
                 android:textSize="15sp"
                 android:layout_marginTop="10dp"
                 android:textColor="@android:color/black"
-                android:text="Email is just for password recovery"/>
+                android:text="Email is just for password recovery..."/>
 
 
         </LinearLayout>
@@ -182,5 +182,26 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#EAEAEA"/>
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="15dp">
+
+<!--        Paste add id-->
+
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+    </com.google.android.gms.ads.AdView>
+    </RelativeLayout>
+
 
 </LinearLayout>
