--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="colorTints">#FF1493</color>
     <color name="colorWhite">#FFFFFF</color>
 
-<!-- #d11d53  #FC4445 #dd3333 #f3c70d yellow-#FFEB3B-->
+<!-- #d11d53  #FC4445 #dd3333 #f3c70d yellow-#FFEB3B #32CD32  #84FF4F-->
 </resources>
