--- a/app/src/main/res/layout-sm/activity_paypal.xml
+++ b/app/src/main/res/layout-sm/activity_paypal.xml
@@ -19,16 +19,17 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/paypal"
-        android:layout_marginTop="35dp"
-        app:cardCornerRadius="32dp"
+        android:layout_marginTop="25dp"
+        app:cardCornerRadius="18dp"
+        android:stateListAnimator="@null"
         android:padding="25dp"
         android:layout_centerHorizontal="true"
-        android:layout_width="150dp"
-        android:layout_height="150dp">
+        android:layout_width="100dp"
+        android:layout_height="100dp">
 
         <ImageView
-            android:layout_width="70dp"
-            android:layout_height="100dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:src="@drawable/paypal"/>
     </androidx.cardview.widget.CardView>
@@ -37,23 +38,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/paypal"
-        android:padding="15dp"
+        android:padding="10dp"
         android:orientation="vertical">
 
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:padding="10dp"
             android:layout_gravity="center"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
             android:paddingLeft="15dp"
             android:inputType="number"
             android:hint="Amount you want to redeem"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="25dp"
             android:textColor="#000"
             tools:ignore="Autofill"/>
 
@@ -61,7 +62,7 @@
             android:id="@+id/editText1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:padding="10dp"
             android:layout_gravity="center"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
@@ -69,7 +70,7 @@
             android:inputType="textEmailAddress"
             android:hint="Paypal Email Adress"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="25dp"
             android:textColor="#000"
             tools:ignore="Autofill"/>
 
@@ -77,30 +78,30 @@
             android:id="@+id/textName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:padding="10dp"
             android:layout_gravity="center"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
             android:paddingLeft="15dp"
             android:hint="Paypal Name"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="25dp"
             android:textColor="#000"
             tools:ignore="Autofill"/>
 
         <Button
             android:id="@+id/button"
-            android:layout_width="250dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="34dp"
+            android:layout_marginBottom="38dp"
             android:background="@drawable/round_corner"
             android:backgroundTint="#d11d53"
             android:text="Redeem"
             android:layout_gravity="center"
             android:stateListAnimator="@null"
             android:textColor="@color/colorWhite"
-            android:padding="16dp"
-            android:textSize="22sp"
+            android:padding="8dp"
+            android:textSize="17sp"
             android:textStyle="bold"/>
 
 
@@ -123,75 +124,75 @@
 
 
 
-<!--<LinearLayout-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="match_parent"-->
-<!--android:layout_below="@+id/paypal"-->
-<!--android:padding="15dp"-->
-<!--android:orientation="vertical">-->
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_below="@+id/paypal"-->
+    <!--android:padding="15dp"-->
+    <!--android:orientation="vertical">-->
 
-<!--<EditText-->
-<!--    android:id="@+id/editText"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:padding="16dp"-->
-<!--    android:layout_gravity="center"-->
-<!--    android:layout_marginTop="45dp"-->
-<!--    android:background="@drawable/flat_corner"-->
-<!--    android:backgroundTint="@color/colorWhite"-->
-<!--    android:paddingLeft="15dp"-->
-<!--    android:inputType="number"-->
-<!--    android:hint="Amount you want to redeem"-->
-<!--    android:textColorHint="@android:color/darker_gray"-->
-<!--    android:layout_marginBottom="30dp"-->
-<!--    android:textColor="#000"-->
-<!--    tools:ignore="Autofill"/>-->
+    <!--<EditText-->
+    <!--    android:id="@+id/editText"-->
+    <!--    android:layout_width="match_parent"-->
+    <!--    android:layout_height="wrap_content"-->
+    <!--    android:padding="16dp"-->
+    <!--    android:layout_gravity="center"-->
+    <!--    android:layout_marginTop="45dp"-->
+    <!--    android:background="@drawable/flat_corner"-->
+    <!--    android:backgroundTint="@color/colorWhite"-->
+    <!--    android:paddingLeft="15dp"-->
+    <!--    android:inputType="number"-->
+    <!--    android:hint="Amount you want to redeem"-->
+    <!--    android:textColorHint="@android:color/darker_gray"-->
+    <!--    android:layout_marginBottom="30dp"-->
+    <!--    android:textColor="#000"-->
+    <!--    tools:ignore="Autofill"/>-->
 
-<!--<EditText-->
-<!--    android:id="@+id/editText1"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:padding="16dp"-->
-<!--    android:layout_gravity="center"-->
-<!--    android:background="@drawable/flat_corner"-->
-<!--    android:backgroundTint="@color/colorWhite"-->
-<!--    android:paddingLeft="15dp"-->
-<!--    android:hint="Paytm Name"-->
-<!--    android:textColorHint="@android:color/darker_gray"-->
-<!--    android:layout_marginBottom="30dp"-->
-<!--    android:textColor="#000"-->
-<!--    tools:ignore="Autofill"/>-->
+    <!--<EditText-->
+    <!--    android:id="@+id/editText1"-->
+    <!--    android:layout_width="match_parent"-->
+    <!--    android:layout_height="wrap_content"-->
+    <!--    android:padding="16dp"-->
+    <!--    android:layout_gravity="center"-->
+    <!--    android:background="@drawable/flat_corner"-->
+    <!--    android:backgroundTint="@color/colorWhite"-->
+    <!--    android:paddingLeft="15dp"-->
+    <!--    android:hint="Paytm Name"-->
+    <!--    android:textColorHint="@android:color/darker_gray"-->
+    <!--    android:layout_marginBottom="30dp"-->
+    <!--    android:textColor="#000"-->
+    <!--    tools:ignore="Autofill"/>-->
 
-<!--<EditText-->
-<!--    android:id="@+id/textno"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:padding="16dp"-->
-<!--    android:layout_gravity="center"-->
-<!--    android:background="@drawable/flat_corner"-->
-<!--    android:backgroundTint="@color/colorWhite"-->
-<!--    android:paddingLeft="15dp"-->
-<!--    android:inputType="number"-->
-<!--    android:hint="Paytm number"-->
-<!--    android:textColorHint="@android:color/darker_gray"-->
-<!--    android:layout_marginBottom="20dp"-->
-<!--    android:textColor="#000"-->
-<!--    tools:ignore="Autofill"/>-->
+    <!--<EditText-->
+    <!--    android:id="@+id/textno"-->
+    <!--    android:layout_width="match_parent"-->
+    <!--    android:layout_height="wrap_content"-->
+    <!--    android:padding="16dp"-->
+    <!--    android:layout_gravity="center"-->
+    <!--    android:background="@drawable/flat_corner"-->
+    <!--    android:backgroundTint="@color/colorWhite"-->
+    <!--    android:paddingLeft="15dp"-->
+    <!--    android:inputType="number"-->
+    <!--    android:hint="Paytm number"-->
+    <!--    android:textColorHint="@android:color/darker_gray"-->
+    <!--    android:layout_marginBottom="20dp"-->
+    <!--    android:textColor="#000"-->
+    <!--    tools:ignore="Autofill"/>-->
 
-<!--<Button-->
-<!--    android:id="@+id/button"-->
-<!--    android:layout_width="250dp"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:layout_marginBottom="32dp"-->
-<!--    android:background="@drawable/round_corner"-->
-<!--    android:backgroundTint="#d11d53"-->
-<!--    android:text="Redeem"-->
-<!--    android:layout_gravity="center"-->
-<!--    android:stateListAnimator="@null"-->
-<!--    android:textColor="@color/colorWhite"-->
-<!--    android:padding="16dp"-->
-<!--    android:textSize="22sp"-->
-<!--    android:textStyle="bold"/>-->
+    <!--<Button-->
+    <!--    android:id="@+id/button"-->
+    <!--    android:layout_width="250dp"-->
+    <!--    android:layout_height="wrap_content"-->
+    <!--    android:layout_marginBottom="32dp"-->
+    <!--    android:background="@drawable/round_corner"-->
+    <!--    android:backgroundTint="#d11d53"-->
+    <!--    android:text="Redeem"-->
+    <!--    android:layout_gravity="center"-->
+    <!--    android:stateListAnimator="@null"-->
+    <!--    android:textColor="@color/colorWhite"-->
+    <!--    android:padding="16dp"-->
+    <!--    android:textSize="22sp"-->
+    <!--    android:textStyle="bold"/>-->
 
 
-<!--</LinearLayout>-->
+    <!--</LinearLayout>-->
