--- a/app/src/main/res/layout-sm/activity_quiz.xml
+++ b/app/src/main/res/layout-sm/activity_quiz.xml
@@ -20,19 +20,19 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="8dp"
+            android:text="1/10"
             android:textColor="@color/colorWhite"
-            android:textSize="22sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/questionText"
             android:layout_width="match_parent"
-            android:layout_height="179dp"
-            android:layout_margin="16dp"
+            android:layout_height="120dp"
             android:gravity="center"
-            android:padding="8dp"
+            android:padding="5dp"
             android:textColor="@color/colorWhite"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -40,12 +40,12 @@
     <LinearLayout
         android:id="@+id/ans"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="13dp"
         android:orientation="vertical"
         android:gravity="center"
@@ -55,60 +55,61 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
             android:background="@drawable/round_corner"
             android:backgroundTint="@color/button_background_color"
             android:id="@+id/button1"
             android:textColor="@color/colorWhite"
-            android:padding="16dp"
-            android:textSize="18sp"
+            android:padding="6dp"
+
+            android:textSize="13sp"
             android:textStyle="bold"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
             android:background="@drawable/round_corner"
             android:backgroundTint="@color/button_background_color"
             android:id="@+id/button2"
+            android:layout_marginTop="13dp"
             android:textColor="@color/colorWhite"
-            android:padding="16dp"
-            android:textSize="18sp"
+            android:padding="6dp"
+            android:textSize="13sp"
             android:textStyle="bold"/>
-
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
             android:background="@drawable/round_corner"
             android:backgroundTint="@color/button_background_color"
-            android:textColor="@color/colorWhite"
-            android:padding="16dp"
             android:id="@+id/button3"
-            android:textSize="18sp"
+            android:layout_marginTop="13dp"
+            android:textColor="@color/colorWhite"
+            android:padding="6dp"
+            android:textSize="13sp"
             android:textStyle="bold"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/round_corner"
             android:backgroundTint="@color/button_background_color"
-            android:textColor="@color/colorWhite"
-            android:padding="16dp"
-            android:textSize="18sp"
             android:id="@+id/button4"
+            android:layout_marginTop="13dp"
+            android:textColor="@color/colorWhite"
+            android:padding="6dp"
+            android:textSize="13sp"
             android:textStyle="bold"/>
 
     </LinearLayout>
 
     <TextView
-        android:layout_width="82dp"
-        android:layout_height="82dp"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
         android:layout_below="@id/ques"
-        android:layout_marginTop="-41dp"
+        android:layout_marginTop="-21dp"
         android:textStyle="bold"
-        android:textSize="22sp"
+        android:textSize="12sp"
+        android:text="00:00"
         android:textAlignment="center"
         android:textColor="@color/colorWhite"
         android:background="@drawable/round_corner"
@@ -119,17 +120,17 @@
 
 
 
-        <!--        Paste add id-->
+    <!--        Paste add id-->
 
-        <com.google.android.gms.ads.AdView
-            xmlns:ads="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/adView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
-        </com.google.android.gms.ads.AdView>
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
