--- a/app/src/main/res/layout/result_popup_negative.xml
+++ b/app/src/main/res/layout/result_popup_negative.xml
@@ -49,6 +49,7 @@
                     android:textAlignment="center"
                     android:textStyle="bold"
                     android:text="Sorry!"
+                    android:textColor="#fff"
                     android:textSize="25sp"
                     android:gravity="center_horizontal" />
 
@@ -67,6 +68,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:textAlignment="center"
+                    android:textColor="@color/colorWhite"
                     android:text="Please try again"
                     android:textSize="18sp"
                     android:gravity="center_horizontal" />
