--- a/app/src/main/res/layout-large/activity_paytm.xml
+++ b/app/src/main/res/layout-large/activity_paytm.xml
@@ -5,56 +5,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".PaypalActivity">
+    tools:context=".PaytmActivity">
 
     <ImageView
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="5dp"
         android:src="@drawable/ic_arrow_back_black_24dp"
         android:layout_alignParentLeft="true"
         android:tint="#fff"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/paypal"
-        android:layout_marginTop="25dp"
-        app:cardCornerRadius="18dp"
+        android:layout_marginTop="35dp"
         android:stateListAnimator="@null"
+        app:cardCornerRadius="32dp"
         android:padding="25dp"
         android:layout_centerHorizontal="true"
-        android:layout_width="100dp"
-        android:layout_height="100dp">
+        android:layout_width="150dp"
+        android:layout_height="150dp">
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
-            android:src="@drawable/paypal"/>
+            android:src="@drawable/paytm"/>
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/paypal"
-        android:padding="10dp"
+        android:padding="15dp"
         android:orientation="vertical">
 
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="16dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="35dp"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
             android:paddingLeft="15dp"
             android:inputType="number"
             android:hint="Amount you want to redeem"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="25dp"
+            android:layout_marginBottom="30dp"
             android:textColor="#000"
             tools:ignore="Autofill"/>
 
@@ -62,46 +62,47 @@
             android:id="@+id/editText1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="16dp"
             android:layout_gravity="center"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
             android:paddingLeft="15dp"
-            android:inputType="textEmailAddress"
-            android:hint="Paypal Email Adress"
+            android:inputType="text"
+            android:hint="Paytm Name"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="25dp"
+            android:layout_marginBottom="30dp"
             android:textColor="#000"
             tools:ignore="Autofill"/>
 
         <EditText
-            android:id="@+id/textName"
+            android:id="@+id/textNo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="16dp"
             android:layout_gravity="center"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
             android:paddingLeft="15dp"
-            android:hint="Paypal Name"
+            android:hint="Paytm Number"
+            android:inputType="number"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="25dp"
+            android:layout_marginBottom="30dp"
             android:textColor="#000"
             tools:ignore="Autofill"/>
 
         <Button
             android:id="@+id/button"
-            android:layout_width="180dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="38dp"
+            android:layout_marginBottom="34dp"
             android:background="@drawable/round_corner"
             android:backgroundTint="#d11d53"
             android:text="Redeem"
             android:layout_gravity="center"
             android:stateListAnimator="@null"
             android:textColor="@color/colorWhite"
-            android:padding="8dp"
-            android:textSize="17sp"
+            android:padding="16dp"
+            android:textSize="22sp"
             android:textStyle="bold"/>
 
 
