--- a/app/src/main/res/layout-large/activity_quiz.xml
+++ b/app/src/main/res/layout-large/activity_quiz.xml
@@ -19,20 +19,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:padding="8dp"
-            android:text="1/10"
+            android:padding="20dp"
             android:textColor="@color/colorWhite"
-            android:textSize="15sp"
+            android:textSize="28sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/questionText"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="195dp"
+            android:layout_margin="17dp"
             android:gravity="center"
-            android:padding="5dp"
+            android:padding="18dp"
             android:textColor="@color/colorWhite"
-            android:textSize="15sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -40,13 +40,13 @@
     <LinearLayout
         android:id="@+id/ans"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginBottom="36dp"
         android:orientation="vertical"
         android:gravity="center"
         android:layout_below="@+id/ques"
@@ -55,61 +55,60 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="18dp"
             android:background="@drawable/round_corner"
             android:backgroundTint="@color/button_background_color"
             android:id="@+id/button1"
             android:textColor="@color/colorWhite"
-            android:padding="6dp"
-
-            android:textSize="13sp"
+            android:padding="25dp"
+            android:textSize="23sp"
             android:textStyle="bold"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="18dp"
             android:background="@drawable/round_corner"
             android:backgroundTint="@color/button_background_color"
             android:id="@+id/button2"
-            android:layout_marginTop="13dp"
             android:textColor="@color/colorWhite"
-            android:padding="6dp"
-            android:textSize="13sp"
-            android:textStyle="bold"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/round_corner"
-            android:backgroundTint="@color/button_background_color"
-            android:id="@+id/button3"
-            android:layout_marginTop="13dp"
-            android:textColor="@color/colorWhite"
-            android:padding="6dp"
-            android:textSize="13sp"
+            android:padding="25dp"
+            android:textSize="23sp"
             android:textStyle="bold"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="18dp"
             android:background="@drawable/round_corner"
             android:backgroundTint="@color/button_background_color"
-            android:id="@+id/button4"
-            android:layout_marginTop="13dp"
             android:textColor="@color/colorWhite"
-            android:padding="6dp"
-            android:textSize="13sp"
+            android:padding="25dp"
+            android:id="@+id/button3"
+            android:textSize="23sp"
+            android:textStyle="bold"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="18dp"
+            android:background="@drawable/round_corner"
+            android:backgroundTint="@color/button_background_color"
+            android:textColor="@color/colorWhite"
+            android:padding="25dp"
+            android:textSize="23sp"
+            android:id="@+id/button4"
             android:textStyle="bold"/>
 
     </LinearLayout>
 
     <TextView
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_below="@id/ques"
-        android:layout_marginTop="-21dp"
+        android:layout_marginTop="-60dp"
         android:textStyle="bold"
-        android:textSize="12sp"
-        android:text="00:00"
+        android:textSize="20sp"
         android:textAlignment="center"
         android:textColor="@color/colorWhite"
         android:background="@drawable/round_corner"
