--- a/app/src/main/res/layout-normal/activity_invite.xml
+++ b/app/src/main/res/layout-normal/activity_invite.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".Invite">
+    tools:context=".Invite"
+    tools:ignore="MissingDefaultResource">
 
 
 
@@ -80,7 +81,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:background="@drawable/round_corner"
-        android:backgroundTint="@color/button"
+        android:backgroundTint="@color/btn"
         android:text="Get Rewards"
         android:layout_marginBottom="55dp"
         android:stateListAnimator="@null"
