--- a/app/src/main/res/layout-normal/activity_login.xml
+++ b/app/src/main/res/layout-normal/activity_login.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="25dp"
+    android:padding="22dp"
     android:background="@color/colorPrimary"
-    tools:context=".RegisterActivity">
+    tools:context=".LoginActivity"
+    tools:ignore="MissingDefaultResource">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,28 +18,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
-            android:text="Sign Up"
-            android:textSize="55dp"
+            android:text="Login"
+            android:textSize="45dp"
             android:textStyle="bold"
             android:gravity="center"
-            android:layout_marginTop="35dp"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="10dp"/>
 
-        <EditText
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:background="@drawable/flat_corner"
-            android:backgroundTint="@color/colorWhite"
-            android:paddingLeft="15dp"
-            android:layout_marginTop="45dp"
-            android:inputType="text"
-            android:hint="Your Name"
-            android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="30dp"
-            android:textColor="#000"
-            tools:ignore="Autofill"/>
 
 
         <EditText
@@ -46,6 +32,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
             android:paddingLeft="15dp"
@@ -57,34 +45,47 @@
             tools:ignore="Autofill"/>
 
         <EditText
-            android:id="@+id/editTextPassword"
+            android:id="@+id/textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
+            android:layout_gravity="center"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
             android:paddingLeft="15dp"
             android:inputType="textPassword"
             android:hint="Password"
-            tools:ignore="Autofill"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="30dp"
-            android:textColor="#000"/>
+            android:layout_marginBottom="35dp"
+            android:textColor="#000"
+            tools:ignore="Autofill"/>
 
         <Button
             android:id="@+id/button"
-            android:layout_width="250dp"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="38dp"
             android:background="@drawable/button_background"
+            android:backgroundTint="@color/btn"
+            android:text="LOG IN"
+            android:onClick="loginUser"
             android:layout_gravity="center"
             android:stateListAnimator="@null"
-            android:text="Sign Up"
-            android:onClick="register"
             android:textColor="@color/colorWhite"
-            android:padding="16dp"
+            android:padding="14dp"
             android:textSize="22sp"
             android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/colorWhite"
+            android:text="Forgot a password ?"
+            android:onClick="forgotPassword"
+            android:textSize="17sp"
+            android:layout_marginBottom="16dp"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -95,18 +96,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorWhite"
-                android:text="Already have an account? "
-                android:textSize="17dp"/>
+                android:textColor="@android:color/white"
+                android:text="Don't have an account?"
+                android:textSize="17sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#FFDD00"
-                android:text="Login"
+                android:textColor="@color/btn"
+                android:text=" Register"
                 android:textStyle="bold"
-                android:onClick="goToLogin"
-                android:textSize="20sp"/>
+                android:onClick="goToRegister"
+                android:textSize="22sp"/>
         </LinearLayout>
 
     </LinearLayout>
