--- a/app/src/main/res/layout-normal/activity_payment.xml
+++ b/app/src/main/res/layout-normal/activity_payment.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".PaymentActivity">
+    tools:context=".PaymentActivity"
+    tools:ignore="MissingDefaultResource">
 
     <ImageView
         android:id="@+id/back"
@@ -35,8 +36,8 @@
         android:stateListAnimator="@null"
         android:layout_below="@id/option"
         app:cardCornerRadius="12dp"
-        android:layout_width="100dp"
-        android:layout_height="100dp">
+        android:layout_width="150dp"
+        android:layout_height="150dp">
 
         <ImageView
             android:layout_width="50dp"
@@ -52,8 +53,8 @@
         android:layout_centerInParent="true"
         android:stateListAnimator="@null"
         android:layout_below="@id/paypal"
-        android:layout_width="100dp"
-        android:layout_height="100dp">
+        android:layout_width="150dp"
+        android:layout_height="150dp">
 
         <ImageView
             android:layout_width="50dp"
