--- a/app/src/main/res/layout-normal/activity_paytm.xml
+++ b/app/src/main/res/layout-normal/activity_paytm.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".PaytmActivity">
+    tools:context=".PaytmActivity"
+    tools:ignore="MissingDefaultResource">
 
     <ImageView
         android:id="@+id/back"
@@ -19,17 +20,17 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/paypal"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="25dp"
+        app:cardCornerRadius="18dp"
         android:stateListAnimator="@null"
-        app:cardCornerRadius="32dp"
         android:padding="25dp"
         android:layout_centerHorizontal="true"
         android:layout_width="150dp"
         android:layout_height="150dp">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:src="@drawable/paytm"/>
     </androidx.cardview.widget.CardView>
@@ -38,23 +39,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/paypal"
-        android:padding="15dp"
+        android:padding="20dp"
+        android:layout_marginTop="10dp"
         android:orientation="vertical">
 
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:padding="10dp"
             android:layout_gravity="center"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
             android:paddingLeft="15dp"
             android:inputType="number"
             android:hint="Amount you want to redeem"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="25dp"
             android:textColor="#000"
             tools:ignore="Autofill"/>
 
@@ -62,7 +64,7 @@
             android:id="@+id/editText1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:padding="10dp"
             android:layout_gravity="center"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
@@ -70,7 +72,7 @@
             android:inputType="text"
             android:hint="Paytm Name"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="25dp"
             android:textColor="#000"
             tools:ignore="Autofill"/>
 
@@ -78,7 +80,7 @@
             android:id="@+id/textNo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:padding="10dp"
             android:layout_gravity="center"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
@@ -86,22 +88,22 @@
             android:hint="Paytm Number"
             android:inputType="number"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="25dp"
             android:textColor="#000"
             tools:ignore="Autofill"/>
 
         <Button
             android:id="@+id/button"
-            android:layout_width="250dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="34dp"
+            android:layout_marginBottom="38dp"
             android:background="@drawable/round_corner"
-            android:backgroundTint="#d11d53"
+            android:backgroundTint="@color/btn"
             android:text="Redeem"
             android:layout_gravity="center"
             android:stateListAnimator="@null"
             android:textColor="@color/colorWhite"
-            android:padding="16dp"
+            android:padding="14dp"
             android:textSize="22sp"
             android:textStyle="bold"/>
 
