--- a/app/src/main/res/layout-normal/activity_register.xml
+++ b/app/src/main/res/layout-normal/activity_register.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="25dp"
+    android:padding="17dp"
     android:background="@color/colorPrimary"
-    tools:context=".LoginActivity">
+    tools:context=".RegisterActivity"
+    tools:ignore="MissingDefaultResource">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,13 +18,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
-            android:text="Login"
-            android:textSize="55dp"
+            android:text="Sign Up"
+            android:textSize="45dp"
             android:textStyle="bold"
             android:gravity="center"
-            android:layout_marginTop="35dp"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginTop="45dp"
+            android:layout_marginBottom="10dp"/>
 
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:background="@drawable/flat_corner"
+            android:backgroundTint="@color/colorWhite"
+            android:paddingLeft="15dp"
+            android:layout_marginTop="30dp"
+            android:inputType="text"
+            android:hint="Your Name"
+            android:textColorHint="@android:color/darker_gray"
+            android:layout_marginBottom="20dp"
+            android:textColor="#000"
+            tools:ignore="Autofill"/>
 
 
         <EditText
@@ -31,81 +47,69 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="45dp"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
             android:paddingLeft="15dp"
             android:inputType="textEmailAddress"
             android:hint="Email Address"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="20dp"
             android:textColor="#000"
             tools:ignore="Autofill"/>
 
         <EditText
-            android:id="@+id/textPassword"
+            android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:layout_gravity="center"
             android:background="@drawable/flat_corner"
             android:backgroundTint="@color/colorWhite"
             android:paddingLeft="15dp"
             android:inputType="textPassword"
             android:hint="Password"
+            tools:ignore="Autofill"
             android:textColorHint="@android:color/darker_gray"
-            android:layout_marginBottom="30dp"
-            android:textColor="#000"
-            tools:ignore="Autofill"/>
+            android:layout_marginBottom="35dp"
+            android:textColor="#000"/>
 
         <Button
             android:id="@+id/button"
-            android:layout_width="250dp"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="28dp"
             android:background="@drawable/button_background"
-            android:text="Log In"
+            android:backgroundTint="@color/btn"
+            android:text="Sign Up"
+            android:onClick="register"
             android:layout_gravity="center"
             android:stateListAnimator="@null"
-            android:onClick="loginUser"
             android:textColor="@color/colorWhite"
-            android:padding="16dp"
+            android:padding="14dp"
             android:textSize="22sp"
             android:textStyle="bold"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/colorWhite"
-            android:text="Forgot a password ?"
-            android:onClick="forgotPassword"
-            android:textSize="17dp"
-            android:layout_marginBottom="25dp"/>
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginTop="-12dp"
             android:gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/white"
-                android:text="Don't have an account?"
-                android:textSize="17dp"/>
+                android:textColor="@color/colorWhite"
+                android:text="Already have an account? "
+                android:textSize="17sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#FFDD00"
-                android:text=" Register"
+                android:textColor="@color/btn"
+                android:text="Login"
                 android:textStyle="bold"
-                android:onClick="goToRegister"
-                android:textSize="20sp"/>
+                android:onClick="goToLogin"
+                android:textSize="22sp"/>
         </LinearLayout>
 
     </LinearLayout>
