--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,6 +10,14 @@
 
 
 
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="170dp"
+        android:layout_marginBottom="15dp"
+        android:src="@drawable/icon"
+        android:layout_above="@id/cashy"
+        android:layout_centerHorizontal="true"/>
+
 
     <TextView
         android:id="@+id/cashy"
